# Tree_Election_MPI

./: CMakeLists.txt  README.md  TreeElection.cpp
